--- a/Frontend/src/Components/Admin.css
+++ b/Frontend/src/Components/Admin.css
@@ -1,3 +1,62 @@
 .admin{
-    background-color: black;
+    background: linear-gradient(180deg, #211c7e, #12ac9f);
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    z-index: -3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.admin-formstyle{
+    border: 1px solid;
+    height: auto;
+    width: 40%;
+    border-radius: 15px;
+    padding: 20px;
+}
+
+.admin input{
+    color: white;
+}
+
+input::placeholder{
+    color: black;
+}
+
+button{
+    border: 1px solid #3498db;
+    background: none;
+    color: black;
+    padding: 10px 190px;
+    font-size: 20px;
+    cursor: pointer;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+}
+
+button:hover{
+    color: white;
+}
+
+button::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0%;
+    background: #000;
+    z-index: -1;
+    border-radius: 50% 50% 0 0;
+    transition: 0.8s;
+}
+
+button:hover::before{
+    height: 180%;
 }
