--- a/Frontend/src/Components/AdminPostCreation.css
+++ b/Frontend/src/Components/AdminPostCreation.css
@@ -1,4 +1,4 @@
-.form-container {
+/* .form-container {
   max-width: 500px;
   margin: 0 auto;
   padding: 20px;
@@ -23,7 +23,7 @@
   border: 1px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  color: black; /* Set input text color to black */
+  color: black; 
 }
 
 .form-container button {
@@ -53,4 +53,125 @@
 .message.error {
   background-color: #f8d7da;
   color: #721c24;
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+.custom-container form h2 {
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  color: #000;
+  font-weight: bold;
+  margin-top: 180px;
+  margin-bottom: 20px;
+}
+
+
+p {
+  color: black;
+  font-size: 1.3rem;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: white;
+  font-size: 1.3rem;
+}
+
+.f-pass{
+  display: flex;
+  justify-content: flex-end;
+  font-size: .9rem;
+}
+
+.f-pass:hover{
+  color: #01D28E;
+}
+
+.check{
+  display: flex;
+  justify-content: flex-end;
+}
+
+.check label{
+  color: #01D28E;
+  font-weight: 600;
+}
+
+.custom-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* min-height: 100vh; */
+  flex-direction: column;
+  column-gap: 30px;
+ margin-top: 5%;
+  /* background: blue; */
+}
+
+.custom-container form{
+  border: 1px solid;
+  padding: 40px 50px;
+  border-radius: 15px;
+  background-color: transparent;
+}
+
+.input-box{
+  position: relative;
+  /* width: 250px; */
+}
+
+.input-box input{
+  width: 100%;
+  padding: 10px;
+  border: 1px solid;
+  background-color: transparent;
+  border-radius: 5px;
+  outline: none;
+  color: black;
+  font-size: 1em;
+  transition: 0.5s;
+}
+
+.input-box{
+  margin-bottom: 10px;
+}
+
+.input-box span{
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  padding: 10px;
+  pointer-events: none;
+  font-size: 1em;
+  color: black;
+  text-transform: uppercase;
+  transition: 0.5s;
+}
+
+.input-box input:valid ~ span,
+.input-box input:focus ~ span
+{
+  color: #00dfc4;
+  transform: translatex(10px) translateY(-26px);
+  font-size: 0.65rem;
+  padding: 0 10px;
+  background: #1d2b3a;
+  border-left: 1px solid #00dfc4;
+  border-right: 1px solid #00dfc4;
+  letter-spacing: 0.2em;
+}
+
+.input-box input:valid,
+.input-box input:focus
+{
+  border: 1px solid goldenrod;
+}
+
