--- a/Frontend/src/Components/login.css
+++ b/Frontend/src/Components/login.css
@@ -47,7 +47,7 @@ nav .navbtn:hover{
 main {
     position: relative;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     background: linear-gradient(180deg, #211c7e, #12ac9f);
     overflow: hidden;
     display: flex;
@@ -56,11 +56,15 @@ main {
 }
 
 .container {
-    display: flex;
+    /* display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     border: .2px solid #fff;
 }
+
+/* .image{
+    background-image: url(/Frontend/public/login.jpg);
+} */
 
 .login-imagecontainer {
     position: relative;
@@ -92,7 +96,7 @@ main {
 
 form h2 {
     text-align: center;
-    margin-top: 30px;
+    /* margin-top: -30px; */
     color: #fff;
     font-weight: bolder;
 }
