--- a/Frontend/src/Components/login.css
+++ b/Frontend/src/Components/login.css
@@ -44,31 +44,23 @@ nav .navbtn:hover{
     background-color: #12ac9f;
 }
 
-#log-main {
-    position: relative;
+.log-main {
+    position: absolute;
     width: 100%;
-    height: 130vh;
+    height: 110vh;
     background: linear-gradient(180deg, #211c7e, #12ac9f);
     overflow: hidden;
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: -3;
 }
 
 .container {
-    /* display: flex;
+    display: flex;
     justify-content: center;
-    align-items: center; */
+    align-items: center;
     border: .2px solid #fff;
-}
-
- .image{
-    height: 30px;
-    width: 580px;
-} 
-
-.image img{
-    width: 100%;
 }
 
 .login-imagecontainer {
@@ -99,12 +91,11 @@ nav .navbtn:hover{
 }
 
 
-#log-main form h2 {
+form h2 {
     text-align: center;
-    margin-top: 300px;
-    color: black;
+    margin-top: 30px;
+    color: #fff;
     font-weight: bolder;
-    font-size: 2.3rem;
 }
 
 .login-formstyle {
