--- a/Frontend/src/Components/SeeCompany.css
+++ b/Frontend/src/Components/SeeCompany.css
@@ -1,34 +1,46 @@
-.feed {
+.seeCompanyFeed {
     display: grid;
     grid-template-columns: repeat(4, minmax(200px, 1fr));
     grid-gap: 20px;
     margin: 20px;
 }
 
-.card {
+.seeCompanyCard {
+    display: block; /* Ensure the anchor tag fills the entire card */
     border: 2px solid #ccc;
     border-radius: 10px;
-    padding-top: 60px; 
-    padding-bottom: 60px; 
-    padding-left: 80px;
-    padding-right: 80px;
+    padding: 30px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.card:hover {
+.seeCompanyCard:hover {
     transform: translateY(-5px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.card h4 {
+.seeCompanyCard h4 {
     margin-bottom: 15px;
     font-size: 1.4rem;
     color: #333;
 }
 
+.seeCompanyCard:hover h4 {
+    color: #333; /* Ensure the text color remains consistent on hover */
+}
+
+.seeCompanyCard h6 {
+    margin-bottom: 10px;
+    font-size: 1rem;
+    color: #666;
+}
+
+.seeCompanyCard:hover h6 {
+    color: #666; /* Ensure the text color remains consistent on hover */
+}
+
 @media only screen and (max-width: 768px) {
-    .feed {
+    .seeCompanyFeed {
         grid-template-columns: repeat(2, minmax(200px, 1fr));
     }
 }
