--- a/Frontend/src/Components/Admin.css
+++ b/Frontend/src/Components/Admin.css
@@ -10,42 +10,42 @@
 }
 
 .admin-formstyle {
-    border: 2px solid #3498db; /* Adjusted border thickness and color */
+    border: 2px solid #3498db;
     height: auto;
     width: 40%;
     border-radius: 15px;
-    padding: 30px; /* Increased padding for better spacing */
-    background-color: rgba(255, 255, 255, 0.9); /* Semi-transparent white background */
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3); /* Added box shadow for depth */
+    padding: 30px;
+    background-color: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
 
 .admin input {
-    color: #333; /* Changed input text color */
-    border: none; /* Removed border for inputs */
-    border-bottom: 2px solid #3498db; /* Added bottom border */
-    background-color: transparent; /* Transparent background */
-    padding: 10px; /* Adjusted padding for inputs */
-    margin-bottom: 20px; /* Added margin bottom for spacing */
+    color: #333;
+    border: none;
+    border-bottom: 2px solid #3498db;
+    background-color: transparent;
+    padding: 10px;
+    margin-bottom: 20px;
 }
 
 input::placeholder {
-    color: #999; /* Adjusted placeholder color */
+    color: #999;
 }
 
 button {
     border: none;
-    background: #3498db; /* Button background color */
-    color: white; /* Button text color */
-    padding: 15px 30px; /* Adjusted padding for better button size */
-    font-size: 18px; /* Decreased font size for better fit */
+    background: #3498db;
+    color: white;
+    padding: 15px 30px;
+    font-size: 18px;
     cursor: pointer;
-    margin: 10px 0; /* Adjusted margin for better spacing */
-    transition: background-color 0.3s, color 0.3s; /* Smooth color transition */
-    border-radius: 5px; /* Added border radius */
+    margin: 10px 0;
+    transition: background-color 0.3s, color 0.3s;
+    border-radius: 5px;
 }
 
 button:hover {
-    background-color: #2980b9; /* Darker background color on hover */
+    background-color: #2980b9;
 }
 
 button::before {
@@ -53,24 +53,24 @@ button::before {
     position: absolute;
     left: 50%;
     bottom: -80%;
-    transform: translateX(-50%); /* Centered horizontally */
+    transform: translateX(-50%);
     width: 200%;
     height: 200%;
-    background: rgba(255, 255, 255, 0.1); /* Semi-transparent white background */
+    background: rgba(255, 255, 255, 0.1);
     border-radius: 50%;
     transition: 0.8s;
     z-index: -1;
 }
 
 button:hover::before {
-    bottom: -40%; /* Increased height on hover */
+    bottom: -40%;
 }
 .signin {
     color: white;
-    text-decoration: underline; /* Underline effect */
-    font-size: 16px; /* Adjust font size as needed */
+    text-decoration: underline;
+    font-size: 16px;
 }
 
 .signin:hover {
-    color: skyblue; /* Change color on hover */
+    color: skyblue;
 }
