--- a/Frontend/src/Components/Admin.css
+++ b/Frontend/src/Components/Admin.css
@@ -1,4 +1,4 @@
-.admin {
+.admin{
     background: linear-gradient(180deg, #211c7e, #12ac9f);
     height: 100vh;
     width: 100%;
@@ -9,68 +9,59 @@
     align-items: center;
 }
 
-.admin-formstyle {
-    border: 2px solid #3498db;
+.admin-formstyle{
+    border: 1px solid;
     height: auto;
     width: 40%;
     border-radius: 15px;
-    padding: 30px;
-    background-color: rgba(255, 255, 255, 0.9);
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+    padding: 20px;
 }
 
-.admin input {
-    color: #333;
-    border: none;
-    border-bottom: 2px solid #3498db;
-    background-color: transparent;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-input::placeholder {
-    color: #999;
-}
-
-button {
-    border: none;
-    background: #3498db;
+.admin input{
     color: white;
-    padding: 15px 30px;
-    font-size: 18px;
+}
+
+input::placeholder{
+    color: black;
+}
+
+button{
+    border: 1px solid #3498db;
+    background: none;
+    color: black;
+    padding: 10px 190px;
+    font-size: 20px;
     cursor: pointer;
-    margin: 10px 0;
-    transition: background-color 0.3s, color 0.3s;
-    border-radius: 5px;
+    margin: 10px;
+    transition: 0.8s;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
 }
 
-button:hover {
-    background-color: #2980b9;
+button:hover{
+    color: white;
 }
 
-button::before {
+button::before{
     content: "";
     position: absolute;
-    left: 50%;
-    bottom: -80%;
-    transform: translateX(-50%);
-    width: 200%;
-    height: 200%;
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 50%;
-    transition: 0.8s;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 0%;
+    background: #000;
     z-index: -1;
+    border-radius: 50% 50% 0 0;
+    transition: 0.8s;
 }
 
-button:hover::before {
-    bottom: -40%;
-}
-.signin {
-    color: white;
-    text-decoration: underline;
-    font-size: 16px;
+button:hover::before{
+    height: 180%;
 }
 
-.signin:hover {
-    color: skyblue;
+.admin-btn{
+    display: flex;
+    justify-content: center;
 }
