--- a/Frontend/src/Components/NavBar.css
+++ b/Frontend/src/Components/NavBar.css
@@ -2,12 +2,14 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #0f0f0f;
+    background-color:rgba(15, 15, 15, 0.8);
+    padding: 10px 20px;
+    backdrop-filter: blur(10px);
 }
 
 ul li {
     display: inline-block;
-    padding: 15px;
+    padding: 10px; /* Reduced padding */
     list-style: none;
 }
 
@@ -28,16 +30,18 @@ nav .menu {
     right: 0.5rem;
     flex-direction: column;
     justify-content: space-between;
-    width: 2.25rem;
-    height: 2rem;
+    width: 1.5rem; /* Smaller width */
+    height: 1.5rem; /* Smaller height */
 }
 
 nav .menu span {
-    height: 0.4rem;
+    height: 0.2rem; /* Reduced height */
     width: 100%;
     background-color: #fff;
-    border-radius: 0.2rem;
+    border-radius: 0.1rem; /* Reduced border-radius */
 }
+
+
 
 .search {
     display: flex;
@@ -93,32 +97,97 @@ nav .menu span {
 }
 
 .createPost {
-    padding: 10px 50px;
+    padding: 10px 20px; /* Adjusted padding */
 }
 
-@media (max-width: 500px) {
+@media (max-width: 768px) {
     nav .menu {
         display: flex;
     }
 
-    nav {
-        flex-direction: column;
-        align-items: start;
-    }
-
-    nav ul li {
+    ul {
         display: none;
         flex-direction: column;
+        position: absolute;
+        top: 3.5rem;
+        left: 0;
         width: 100%;
-        margin-bottom: 0.25rem;
+        background-color: #0f0f0f;
+        z-index: 1;
     }
 
-    nav ul li {
-        width: 100%;
-        text-align: center;
-    }
-
-    nav ul.open li {
+    ul.open {
         display: flex;
     }
+
+    li {
+        margin: 0;
+        padding: 10px 20px; /* Adjusted padding */
+        border-bottom: 1px solid #fff;
+    }
+
+    li:last-child {
+        border-bottom: none;
+    }
 }
+
+/* Styles for notification icon */
+.nav-icon-notification {
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .nav-icon-notification svg {
+    width: 24px;
+    height: 24px;
+  }
+  
+  .notification-badge {
+    position: absolute;
+    top: -6px;
+    right: -6px;
+    background-color: red;
+    color: white;
+    border-radius: 50%;
+    padding: 4px 8px;
+    font-size: 0.8em;
+  }
+  
+  /* Styles for notification list */
+  .notification-list {
+    position: absolute;
+    top: 100%;
+    right: 0;
+    z-index: 1;
+    background-color: #f8f9fa;;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 16px;
+    max-height: 350px;
+    overflow-y: auto;
+  }
+  
+  .notification-item {
+    padding: 8px;
+    border-bottom: 1px solid #ccc;
+  }
+  
+  .notification-item:last-child {
+    border-bottom: none;
+  }
+  
+  .notification-item button {
+    margin-left: 8px;
+    padding: 4px 8px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  .notification-item button:hover {
+    background-color: #0056b3;
+  }
+  
