Loading Page done

--- a/Frontend/src/Components/Feed.css
+++ b/Frontend/src/Components/Feed.css
@@ -5,6 +5,14 @@
     margin: 20px;
 }
 
+.back-img img{
+    position: absolute;
+    top: 25%;
+    left: 35%;
+    width: 400px;
+    z-index: -2;
+}
+
 .card {
     border: 2px solid #ccc;
     border-radius: 10px;
