css of forget form

--- a/Frontend/src/Components/login.css
+++ b/Frontend/src/Components/login.css
@@ -57,6 +57,10 @@ nav .navbtn:hover{
 }
 
 .container {
+    background: rgba(255, 255, 255, 0.14);
+    box-shadow: 0 12px 40px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     display: flex;
     justify-content: center;
     align-items: center;
