--- a/Frontend/src/Components/Admin.css
+++ b/Frontend/src/Components/Admin.css
@@ -11,6 +11,10 @@
 
 .admin-formstyle{
     border: 1px solid;
+    background: rgba(255, 255, 255, 0.14);
+    box-shadow: 0 12px 40px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
     height: auto;
     width: 40%;
     border-radius: 15px;
