css small update and most of the navbar is done

--- a/Frontend/src/Components/AdminPostCreation.css
+++ b/Frontend/src/Components/AdminPostCreation.css
@@ -55,11 +55,11 @@
   color: #721c24;
 } */
 
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-}
+} */
 
 
 .custom-container form h2 {
