--- a/Frontend/src/Components/PostByCompany.css
+++ b/Frontend/src/Components/PostByCompany.css
@@ -54,7 +54,7 @@
 }
 
 .post a {
-    color: white;
+    color: #fff;
     font-weight: bold;
     transition: color 0.3s ease;
 }
@@ -63,7 +63,7 @@
     color: #0056b3;
 }
 
-.post .download-box {
+/* .post .download-box {
     display: inline-block;
     padding: 12px 20px;
     border: 1px solid #007bff;
@@ -77,7 +77,7 @@
 
 .post .download-box:hover {
     background-color: white;
-}
+} */
 
 .edit-btn{
     width: 5rem;
@@ -99,4 +99,26 @@
 
 .save-btn{
     padding: 10px 20px;
+}
+
+.flex{
+    display: flex;
+}
+
+.download-box{
+    display: flex;
+    gap: 20px;
+    color: #333;
+    padding: 20px 0;
+}
+
+.download-box a{
+    border: 2px solid #0056b3;
+    border-radius: 15px;
+    background-color: black;
+    padding: 8px;
+}
+
+.download-box a:hover{
+    background-color: white;
 }
