--- a/Frontend/src/Components/Profile.css
+++ b/Frontend/src/Components/Profile.css
@@ -1,24 +1,92 @@
 .profile-field img {
-    max-width: 100%;
-    max-height: 200px;
-  }
+  max-width: 100%;
+  max-height: 200px;
+}
 
-.flex{
+.flex {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 20px;
+  margin-top: -30px;
+}
+
+.profile-info-section {
+  border: 1px solid black;
+  margin-left: 3px;
+}
+
+.profile-info-section h3{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border-bottom: 2px solid red;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+.profile-info{
+  padding: 0px 10px;
+}
+
+.profile-photo-section {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.profile-container {
+.profile-photo img {
+  border: solid black;
+  border-radius: 50%;
+  position: relative;
+  top: -90px;
+}
+
+.profile-details {
   display: flex;
+}
+
+.bg-image img {
+  width: 100%;
+}
+
+.username p{
+  position: relative;
+  top: -100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .profile-section {
   /* Styles for each section */
 }
 
-.profile-info {
-  /* Styles for the information */
+.profile-docs-section {
+  border: 1px solid black;
+}
+
+.profile-docs-section h3 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  border-bottom: 2px solid red;
+  padding: 10px;
+  margin-bottom: 15px;
+}
+
+.profile-docs {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 10px;
+  padding: 0px 10px;
+}
+
+.profile-docs img {
+  width: 100px;
 }
 
 .profile-field {
@@ -50,7 +118,10 @@
 }
 
 .profile-buttons {
-  /* Styles for buttons container */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
 }
 
 .save-button {
@@ -110,33 +181,36 @@
   animation: rotate3 2s linear infinite;
 }
 
-.loading{
+.loading {
   color: white;
 }
 
 @keyframes rotate1 {
   0% {
-      transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
   }
-  100%{
-      transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+
+  100% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
   }
 }
 
-@keyframes rotate2{
-  0%{
-      transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+@keyframes rotate2 {
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
   }
-  100%{
-      transform: rotateX(50deg) rotateY(-10deg) rotateZ(360deg);
+
+  100% {
+    transform: rotateX(50deg) rotateY(-10deg) rotateZ(360deg);
   }
 }
 
-@keyframes rotate3{
-  0%{
-      transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+@keyframes rotate3 {
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
   }
-  100%{
-      transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
 }
