--- a/Frontend/src/Components/landingpage.css
+++ b/Frontend/src/Components/landingpage.css
@@ -1,11 +1,11 @@
 .landingpage {
 	background: #bcdee7 url("http://victory-design.ru/sandbox/codepen/profile_card/bg.png") no-repeat center center fixed;
     background-size: 120% auto;
-    position: fixed;
+    /* position: fixed; */
 	padding: 0px;
 	margin: 0px;
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
 	font: normal 14px/1.618em "Hind", sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
@@ -48,12 +48,12 @@
 .landing-container img{
     width: 100%;
 }
-.landingpage:before {
+/* .landingpage:before {
     content: "";
     height: 0px;
     padding: 0px;
     border: 110em solid #313440;
-	position: absolute;
+	 position: absolute; 
 	left: 50%;
 	top: 100%;
     z-index: 2;
@@ -64,16 +64,16 @@
 	transform: translate(-50%, -50%);
     -webkit-animation: puff_portrait 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
     animation: puff_portrait 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
-}
+} */
 
-.profile-card {
+.profile-card-landing {
 	background: #FFB300;
 	width: 100%;
 	position: absolute;
 	left: 50%;
 	top: 50%;
     z-index: 2;
-	overflow: hidden;
+	/* overflow: hidden; */
     opacity: 0;
     margin-top: 70px;
 	-webkit-transform: translate(-50%, -50%);
